tests/fail/arg_mismatch_inst.us

fn id<T>(v:T) -> T {
    return v;
}

fn main()  {
  
    id::<i32>(10,20); // Expect : Expected `1` args found `2`
}